--- a/src/assets/css/dataview.css
+++ b/src/assets/css/dataview.css
@@ -19,10 +19,16 @@ input,img{border:none;}
     flex-wrap: nowrap;
     background-color: #FFFFFF;
 }
+.page-part-rev{
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: nowrap;
+    background-color: #FFFFFF;
+}
 .blue-text{
     color: #0091f6;
 }
-.red-text{
+.red-text{ 
     color:#e90f38;
 }
 .orange-text{
@@ -49,9 +55,24 @@ input,img{border:none;}
 .font-size-10{
     font-size: 10px;
 }
+.font-size-12{
+    font-size: 12px;
+}
 .pt-2{
     padding-top: 2px;
 }
+.plr-15{
+    padding: 0 15px;
+}
 .padding-2{
     padding: 2px;
+}
+.mr-15{
+    margin-right: 15px;
+}
+.mb-10{
+    margin-bottom: 10px;
+}
+.f-r{
+    float: right;
 }
