--- a/src/assets/css/dataview.css
+++ b/src/assets/css/dataview.css
@@ -31,6 +31,14 @@ input,img{border:none;}
 .red-text{ 
     color:#e90f38;
 }
+.leader-span{
+    padding: 2px;
+    border-radius: 4px;
+    font-size: 12px;
+    width: 50px;
+    word-break: break-word;
+    white-space: nowrap;
+}
 .orange-text{
     color: #ff7608;
 }
